adiciona funcionalidade de busca de clima e exibe resultado

--- a/clima.html
+++ b/clima.html
@@ -16,7 +16,9 @@
         <p>bem vindo digite o local a saber o clima</p>
         <label for="local">local: </label>
         <input type="text" placeholder="digite o local">
-        <button>buscar</button>
+        <button onclick="climatempo()">buscar</button>
+
+        <p id="resultado"></p>
     </main>
     
 </body>
