corrige id do input de local e ajusta mensagens de erro no script de clima

--- a/clima.html
+++ b/clima.html
@@ -15,7 +15,7 @@
     <main>
         <p>bem vindo digite o local a saber o clima</p>
         <label for="local">local: </label>
-        <input type="text" placeholder="digite o local">
+        <input type="text" id="local" placeholder="digite o local">
         <button onclick="climatempo()">buscar</button>
 
         <p id="resultado"></p>
