adiciona rodapé com informações de direitos autorais e link para fonte no clima.html; cria arquivo fonte.html com estrutura básica

--- a/clima.html
+++ b/clima.html
@@ -20,6 +20,15 @@
 
         <p id="resultado"></p>
     </main>
+
+    <img src="clima.jpg" alt="imagem de clima">
+
+    <footer>
+        <p>2025 todos os direitos reservados</p>
+        <nav>
+        <a href="fonte.html">fonte</a>
+        </nav>
+    </footer>
     
 </body>
 </html>
